@@ -67,6 +67,8 @@ Version 0.7.4 UNRELEASED
     action character for downgrades was missing, so the column was left empty --
     as it was an specific background colour until recently.
 
+  * [curses] Show feedback of forbid-version with verbose>0 (Closes: #638841)
+
 - Internal changes:
 
   * In internal_mark_delete(), also check for auto-installability property of
